# strands-tool-template

./: README.md  pyproject.toml  setup_template.py
.github/workflows/: ci.yml  publish.yml
src/strands_template/: __init__.py  hook_provider.py  model.py  tool.py
src/strands_tool_yourname/: __init__.py  your_conversation_manager.py  your_hook_provider.py  your_model.py  your_session_manager.py  your_tool.py
templates/conversation_manager/: README.md  pyproject.toml
templates/conversation_manager/src/strands_conversation_yourname/: __init__.py  your_conversation_manager.py
templates/conversation_manager/tests/: test_your_conversation_manager.py
templates/hook_provider/: README.md  pyproject.toml
templates/hook_provider/src/strands_hooks_yourname/: __init__.py  your_hooks.py
templates/hook_provider/tests/: test_your_hooks.py
templates/model_provider/: README.md  pyproject.toml
templates/model_provider/src/strands_model_yourname/: __init__.py  your_model.py
templates/model_provider/tests/: test_your_model.py
templates/session_manager/: README.md  pyproject.toml
templates/session_manager/src/strands_session_yourname/: __init__.py  your_session_manager.py
templates/session_manager/tests/: test_your_session_manager.py
tests/: test_hook_provider.py  test_tool.py  test_your_conversation_manager.py  test_your_hook_provider.py  test_your_model.py  test_your_session_manager.py  test_your_tool.py
